--- a/Java/Spring/2.Spring IOC实例化Bean.md
+++ b/Java/Spring/2.Spring IOC实例化Bean.md
@@ -1,8 +1,8 @@
 [TOC]
 #Spring 实例化Bean
-![](2021-03-08-15-31-20.png)
+![](images/2021-03-08-15-31-20.png)
 
-![](2021-03-09-09-18-29.png)
+![](images/2021-03-09-09-18-29.png)
 Spring 什么时候实例化Bean，首先要分为两种情况：
 第一：如果使用BeanFactory作为Spring Bean的工厂类，则所有的bean都是在第一次使用该Bean的时候实例化
 第二：如果你使用ApplicationContextzu作为Spring Bean的工厂类，则又分为以下几种情况：
