--- a/Java/Spring/2.Spring IOC实例化Bean.md
+++ b/Java/Spring/2.Spring IOC实例化Bean.md
@@ -5,7 +5,7 @@
 ![](images/2021-03-09-09-18-29.png)
 Spring 什么时候实例化Bean，首先要分为两种情况：
 第一：如果使用BeanFactory作为Spring Bean的工厂类，则所有的bean都是在第一次使用该Bean的时候实例化
-第二：如果你使用ApplicationContextzu作为Spring Bean的工厂类，则又分为以下几种情况：
+第二：如果你使用ApplicationContext作为Spring Bean的工厂类，则又分为以下几种情况：
 (1)：如果bean的scope是singleton的，并且lazy-init为false(默认为false,所以可以不用设置)，则ApplicationContext启动的时候就实例化该Bean，并且将实例化的Bean放在一个map结构的缓存中，下次再使用该Bean的时候，直接从这个缓存中取
 (2)：如果bean的scope是singleton的，并且lazy-init为true，则该Bean的实例化是在第一次使用该Bean的时候进行实例化
 (3):如果bean的scope是prototype的，则该Bean的实例化是在第一次使用该Bean的时候进行实例化
@@ -23,15 +23,15 @@ Spring 什么时候实例化Bean，首先要分为两种情况：
 * org.springframework.beans.factory.support.AbstractAutowireCapableBeanFactory#populateBean **（实例化后属性注入）**
 * org.springframework.beans.factory.support.AbstractAutowireCapableBeanFactory#initializeBean(java.lang.String, java.lang.Object, org.springframework.beans.factory.support.RootBeanDefinition) **（初始化入口）**
 
-##实例化流程
-###1.在AbstractApplicationContext中refresh()方法中
+## 实例化流程
+### 1.在AbstractApplicationContext中refresh()方法中
 ![图 2](../../images/e0fb151a18e3bcfaef758c4fa3349ece18edf7ee5e2a2af6eef7974efbb41469.png)  
 
-
-###2.预实例化所有的非懒加载的单例bean
+### 2.预实例化所有的非懒加载的单例bean
 ![图 3](../../images/3a472f288455b890bcf89d8941d2402800146fc9eefbbc5a9968cd8bb08dda81.png)  
 
-###3.初始化单例所有的单例bean
+### 3.初始化单例所有的单例bean
+
 ```java
  public void preInstantiateSingletons() throws BeansException {
         if (this.logger.isTraceEnabled()) {
@@ -106,13 +106,13 @@ Spring 什么时候实例化Bean，首先要分为两种情况：
 
 ![图 4](../../images/53f539f016cdca803d6c4fa50d721638e8168cc46b6a3572c2f541b23140a4dc.png)  
 
-###4.getBean,获取并创建Bean的入口
+### 4.getBean,获取并创建Bean的入口
 getBean有很多重载方法
 ![图 5](../../images/76a9c33fe435ad35cee829db7818a1903c83cf62b108dd09f9d9ed741ebd30d3.png)  
 
-
-###5.实际的获取并创建Bean的实现
+### 5.实际的获取并创建Bean的实现
 具体分析doGetBean方法：
+
 ```java
 protected <T> T doGetBean(String name, @Nullable Class<T> requiredType, @Nullable Object[] args, boolean typeCheckOnly) throws BeansException {
         String beanName = this.transformedBeanName(name);
@@ -264,7 +264,7 @@ protected <T> T doGetBean(String name, @Nullable Class<T> requiredType, @Nullabl
 
 首先根据beanName到缓存中取找
 ![图 6](../../images/e7ad5e661159426bc38549c63ec8b61dc70c8d43eeea01768a02dc919ecb4c8d.png)  
-###6.从缓存中尝试获取
+### 6.从缓存中尝试获取
 
 三级缓存：
 singletonObjects(一级，日常实际获取Bean的地方)；
@@ -283,16 +283,15 @@ getSingleton方法：
 创建后放入一级缓存中，然后把bean对象返回
 ![图 10](../../images/849b07ef10faf00ab12390ff41e19cf940f083bfe488c40b0e1afdf4df711493.png)  
 
-
 接下来查看具体如何创建bean
-###8.实例化Bean
+### 8.实例化Bean
 ![图 11](../../images/619b0473d3e80b8a3203c35ea284a6fa67de58db61a6cebf9fd86d20f8f4651c.png)  
-
 
 createBean方法中：
 ![图 12](../../images/8e20b54e31be7fee8fd7b6e2b3d870daf2286f23e591ca1b37224c3cad1b6ece.png)  
 
-###9.实例化Bean具体实现 doCreateBean
+### 9.实例化Bean具体实现 doCreateBean
+
 ```java
  protected Object doCreateBean(String beanName, RootBeanDefinition mbd, @Nullable Object[] args) throws BeanCreationException {
          // Instantiate the bean.
@@ -386,15 +385,14 @@ createBean方法中：
     }
 ```
 
-###10.具体实例化过程
+### 10.具体实例化过程
 在上面代码上。在内存中创建bean对象
 ![图 13](../../images/6528d85b7582b9a32471846ee41073f8ca18429d041aae9487e53244c6cd8c87.png)  
 
 ###11.将实例化的Bean添加到三级缓存
 ![图 15](../../images/1005e55be1a823aa28881e88c48cc199d2a2f697f1ffb83d048522f9cde0153b.png)  
 
-
-###12.实例化属性注入
+### 12.实例化属性注入
 设置bean的属性并初始化bean对象
 ![图 14](../../images/7804426bd3ee5857beef6188c70c4c59e97e5373a313712560f0e0ae6e0c8fb4.png)  
 
@@ -405,8 +403,7 @@ createBean方法中：
 
 初始化完成后，会得到一个exposedObject 可以暴露的bean对象，到这里bean就创建完成了，至于设置属性、依赖注入、循环依赖、初始化等具体细节，在后面再来分析。
 
-
-###14.总结->bean的实例化过程
+### 14.总结->bean的实例化过程
 1： refresh的最后，会实例化所有的非懒加载的单例bean
 2： 创建过程，首先回到一级缓存singletonObjects中尝试获取，如果能拿到，则说明之前已经创建过，直接返回，不能再创建
 3:  如果是单例的、非抽象类、非懒加载的，则创建bean对象，在创建之前，会把beanName放入正在创建的容器中标记
